--- a/index.html
+++ b/index.html
@@ -1,47 +1,44 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="linuxDash">
-    <head>
-        <title>linux-dash : Server Monitoring Web Dashboard</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Monitor your Linux server through a simple web dashboard. Open source and free!">
-        <meta name="apple-mobile-web-app-capable" content="yes">
-        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-        <link rel="icon" href="favicon.ico" type="image/x-icon">
-        <link href='//fonts.googleapis.com/css?family=Merriweather:300italic,300|Open+Sans:400,600' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" type="text/css" href="css/main.css">
-        <link rel="stylesheet" type="text/css" href="css/themes.css">
-        <link rel="stylesheet" type="text/css" href="css/animate.css">
-        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-MfvZlkHCEqatNoGiOXveE8FIwMzZg4W85qfrfIFBfYc= sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
 
-        <!-- Angular Libs -->
-        <script src="js/angular.min.js" type="text/javascript"></script>
-        <script src="js/angular-route.js" type="text/javascript"></script>
-        <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-        <!--[if lt IE 9]>
+<head>
+    <title>linux-dash : Server Monitoring Web Dashboard</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Monitor your Linux server through a simple web dashboard. Open source and free!">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link href='https://fonts.googleapis.com/css?family=Roboto:300italic,300|Open+Sans:400,600' rel='stylesheet' type='text/css'>
+
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/themes.css">
+    <link rel="stylesheet" type="text/css" href="css/animate.css">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-MfvZlkHCEqatNoGiOXveE8FIwMzZg4W85qfrfIFBfYc= sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
+
+
+    <!-- Angular Libs -->
+    <script src="js/angular.min.js" type="text/javascript"></script>
+    <script src="js/angular-route.js" type="text/javascript"></script>
+    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
           <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
-    </head>
-    <body>
-        
-        <div class="hero">
-            <h4 class="title">Linux Dash</h4>
-            <small>A simple linux dashboard</small>
-            <theme-switcher></theme-switcher>
-            <nav-bar></nav-bar>
-        </div>
-        
-        <!-- Templates Get Rendered Here -->
-        <div 
-            id="plugins"  
-            class="animated fadeInDown" 
-            ng-view>
-        </div>
+</head>
 
-        <!-- Javascript-->
-        <!-- Placed at the end of the document so the pages load faster -->
-        <script src="js/linuxDash.js" type="text/javascript"></script>
-        <script src="js/modules.js" type="text/javascript"></script>
-        <script src="js/smoothie.min.js" type="text/javascript"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha256-Sk3nkD6mLTMOF0EOpNtsIry+s1CsaqQC1rVLTAy+0yc= sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
-    </body>
+<body>
+    <nav-bar></nav-bar>
+
+
+    <!-- Templates Get Rendered Here -->
+    <div id="plugins" class="animated fadeInDown" ng-view>
+    </div>
+
+    <!-- Javascript-->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="js/linuxDash.js" type="text/javascript"></script>
+    <script src="js/modules.js" type="text/javascript"></script>
+    <script src="js/smoothie.min.js" type="text/javascript"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha256-Sk3nkD6mLTMOF0EOpNtsIry+s1CsaqQC1rVLTAy+0yc= sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
+</body>
+
 </html>
